# file-organiser

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README (1).md  README.md  __init__.py  cli.py  gitignore  history.py  main.py  organizer.py  pyproject.toml  requirements.txt  rules.example.json  rules.py
.github/workflows/: ci.yml
file_organiser/: __init__.py  __main__.py  bench.py  clean.py  cli.py  console_util.py  diff.py  duplicates.py  history.py  organizer.py  rename.py  report.py  rules.py  scanner.py  watch.py
file_organizer/: __init__.py  __main__.py  cli.py  duplicates.py  errors.py  executor.py  history.py  models.py  organizer.py  planner.py  rules.py  runlog.py  scanner.py  utils.py
supabase/migrations/: 20260704014437_organizer_manifests.sql
tests/: test_cli.py  test_duplicates.py  test_history.py  test_organizer.py  test_planner.py  test_rules.py  test_transactions.py  test_utils.py  test_v11.py  test_v12.py  test_v13.py
