[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "file-organizer-cli"
version = "2.0.0"
description = "A preview-first, transaction-backed command-line file organizer"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Sebastian Forbes" }]
keywords = ["cli", "files", "organizer", "duplicates", "undo"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Desktop Environment :: File Managers",
]
dependencies = []

[project.scripts]
file-organizer = "file_organizer.cli:main"

[project.urls]
Repository = "https://github.com/Sebby1770/file-organiser"
Issues = "https://github.com/Sebby1770/file-organiser/issues"

[tool.setuptools]
packages = ["file_organizer"]

[tool.coverage.run]
branch = true
source = ["file_organizer"]

[tool.coverage.report]
show_missing = true
skip_covered = true
